fix spacing and size of navigation

--- a/resources/sass/abstracts/mixins/_mixins.scss
+++ b/resources/sass/abstracts/mixins/_mixins.scss
@@ -12,8 +12,8 @@
 
 @mixin navigation-link {
 	color: $black;
-	font-size: 1.1rem;
-	font-weight: $font-weight-medium;
+	font-size: 0.98rem;
+	font-weight: $font-weight-bold;
 	text-decoration: none;
 	display: block;
 	position: relative;
@@ -24,7 +24,7 @@
 	width: 100%;
 	background-color: $white;
 	color: $light-gray;
-	font-size: 15px;
+	font-size: 14px;
 	line-height: 1.35;
 	text-transform: capitalize;
 	padding: 7px 17px;
