--- a/resources/sass/components/navigation/_navigation.scss
+++ b/resources/sass/components/navigation/_navigation.scss
@@ -105,7 +105,7 @@
 
       a {
         border-top: 3px solid transparent;
-        padding: 45px 13px 35px;
+        padding: 35px 13px 35px;
 
         &:hover {
           border-color: $primary;
