--- a/resources/sass/framework/_framework.scss
+++ b/resources/sass/framework/_framework.scss
@@ -1,5 +1,5 @@
-$font-family-base: "Quicksand", sans-serif !default;
-$accent-font: "Catamaran", sans-serif;
+$font-family-base: "IBM Plex Sans", sans-serif !default;
+$accent-font: "Mulish", sans-serif;
 
 $theme-colors: (
   "primary": #ff4d64,
@@ -17,7 +17,7 @@ $light-gray: #4d4d4d;
 $font-weight-lighter:         lighter !default;
 $font-weight-light:           300 !default;
 $font-weight-normal:          400 !default;
-$font-weight-semimedium:          500 !default;
+$font-weight-semimedium:      500 !default;
 $font-weight-medium:          600!default;
 $font-weight-bold:            700 !default;
 $font-weight-bolder:          bolder !default;
